--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,12 @@ h1, h2, h3 {
 }
 
 h1 {
-    font-size: 400%;
+    font-size: 600%;
     text-align: center;
 }
 
 h2 {
-    font-size: 300%;
+    font-size: 400%;
     display: inline-block;
     margin-bottom: 20px;
 }
@@ -65,6 +65,7 @@ p {
     color: #07020D;
     background: #f3f4ee;
     padding: 20px;
+    line-height: 120%;
 }
 
 /*---------------- Pictures ------------------*/
@@ -242,7 +243,6 @@ header {
 
 /*---------------- Alive ------------------*/
 
-
 .alive {
     padding: 0;
 }
@@ -255,7 +255,6 @@ header {
 }
   
 .alive-showcase {
-    /* margin-top: 50px; */
     list-style: none;
     width: 100%;
     display: flex;
@@ -263,7 +262,6 @@ header {
 
 .alive-showcase li {
     display: block;
-    /* float: left; */
     width: 25%;
 }
 
@@ -285,5 +283,39 @@ header {
 .alive-photo img:hover {
     opacity: 1;
     transform: scale(1.03);
+}
+
+/*---------------- Tron ------------------*/
+
+.tron {
+    display: flex;
+}
+
+.tron-text {
+    width: 55%;
+}
+
+.tron-img {
+    width: 35%;
+    margin-left: 5%;
+    background: #f3f4ee;
+}
+
+
+/*---------------- RAM ------------------*/
+
+.ram {
+    display: flex;
+}
+
+.ram-text {
+    width: 50%;
+}
+
+.ram-img {
+    width: 40%;
+    margin-left: 5%;
+    background: #f3f4ee;
+    align-self: center;
 }
 
